ncc/testsuite/positive/AsLongBug-2.n
//REFERENCE: AsLongBug-1
 

using System;
using System.Console;
using Nemerle.Utility;
using MacroLibrary1;


module Program
{
  Main() : void
  {
    def foo =  macro1( foo = 5L);
    Console.Write(foo);
  }
}


/*

BEGIN-OUTPUT
6
END-OUTPUT
*/
