ncc/testsuite/negative/namespace-b231.n
using Nemerle.Colections;  // E: referenced namespace .* does not exist
using NON = Nonexitant.Class; // E: referenced namespace .* does not exist

using Syyyyyyyyyyyyystem; // E: referenced namespace .* does not exist

public module Program
{
    Main() : void
    {
      def d : DateTime = 1; // E: unbound type name `DateTime'
    }
}

class A { }
